<resources>
    <string name="app_name">头条视频助手</string>


    <string name="permission_write_external_storage">下载视频需要获取读写SD卡权限</string>
    <string name="permission_write_external_denied">没有该权限,将无法将视频保存到本地！</string>
    <string name="button_allow">好的</string>
    <string name="button_cancel">取消</string>

    <!--侧滑栏-->
    <string name="drawer_my_download">我的下载</string>
    <string name="drawer_about_me">关于作者</string>
    <string name="drawer_about_soft">关于软件</string>
    <string name="drawer_feedback">我要反馈</string>
    <string name="drawer_how_to_use">使用教程</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>

    <!--选择栏-->
    <string name="menu_item_new_task">新任务</string>
    <string name="menu_item_start_all">全部开始</string>
    <string name="menu_item_suspend_all">全部暂停</string>
    <string name="menu_item_batch_operation">批量操作</string>
    <string name="menu_item_download_setting">下载设置</string>

    <!--数字选择器-->
    <string name="minus">-</string>
    <string name="add">+</string>

    <string name="setting_title">设置</string>
    <string name="setting_simultaneously_download_count">同时下载任务数</string>
    <string name="setting_retry_count">自动重试次数</string>
    <string name="setting_retry_count_explain">当出错或者连接中断时自动重连%d$1次</string>
    <string name="setting_save_path">选择存储路径</string>
    <string name="setting_current_path">当前:</string>
    <string name="setting_only_wifi">只在WiFi环境下下载</string>
    <string name="setting_show_notification">显示通知栏</string>
    <string name="setting_download_complete_shock">震动</string>
    <string name="setting_download_complete_shock_explain">下载完成时震动提示</string>

    <!--新下载任务界面-->
    <string name="new_task_title">新建下载任务</string>
    <string name="new_task_hint">输入或者粘贴分享的视频地址</string>
    <string name="new_task_download">下载</string>
    <string name="new_task_definition">选择分辨率</string>
    <string name="new_task_definition_item">分辨率:%1$s   %2$sMb</string>
    <string name="string_default">-</string>

    <!--下载任务list界面-->
    <string name="downloading_start">开始</string>
    <string name="downloading_suspend">暂停</string>
    <string name="downloading_size">%1$s/%2$s</string>

    <string name="no_data_new_task">新建下载任务</string>

</resources>
